# vllm-ascend

./: czf.txt  setup.py
dcut/: RUN.md  __init__.py  pyproject.toml  verify_adaptive_config.example.json
dcut/dcut/: __init__.py  config.py  controller.py  monkeypatch.py  verify_adaptive_config.py  verify_adaptive_controller.py
dcut/tests/: test_monkeypatch.py  test_verify_adaptive_controller.py
dcut/tools/: analyze_dcut_log.py
docs/source/tutorials/features/: dcut-performance-investigation.md  dcut.md  index.md
tests/ut/spec_decode/: test_dcut.py
vllm_ascend/: envs.py
vllm_ascend/spec_decode/: dcut.py  llm_base_proposer.py
vllm_ascend/worker/: model_runner_v1.py  worker.py
