[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dcut-adaptive-verify"
version = "0.1.0"
description = "D-Cut adaptive verifier step-length plugin for vLLM Ascend"
requires-python = ">=3.10"

[project.entry-points."vllm.general_plugins"]
dcut_adaptive_verify = "dcut:install"
